Code clean up for more readability

--- a/webscraping/scripts/amazon-televisions.ipynb
+++ b/webscraping/scripts/amazon-televisions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d38408c4",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "745013c6",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "01a165a9",
    "metadata": {},
    "outputs": [],
@@ -32,27 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "cb89771e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: bs4 in c:\\users\\vasu_seelamneni\\onedrive - dell technologies\\desktop\\vasu\\learnings\\data science\\dell\\miniproject-ads\\ads_jan24_miniproject2_vasu_jk\\.miniproj\\lib\\site-packages (0.0.2)\n",
-      "Requirement already satisfied: beautifulsoup4 in c:\\users\\vasu_seelamneni\\onedrive - dell technologies\\desktop\\vasu\\learnings\\data science\\dell\\miniproject-ads\\ads_jan24_miniproject2_vasu_jk\\.miniproj\\lib\\site-packages (from bs4) (4.12.3)\n",
-      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\vasu_seelamneni\\onedrive - dell technologies\\desktop\\vasu\\learnings\\data science\\dell\\miniproject-ads\\ads_jan24_miniproject2_vasu_jk\\.miniproj\\lib\\site-packages (from beautifulsoup4->bs4) (2.5)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip3 install bs4"
+    "# !pip3 install bs4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "c9827516-9db2-4eaa-9795-3b106a8d81c3",
    "metadata": {},
    "outputs": [],
@@ -73,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "76a2cb5a-526e-4fea-a0b0-e2d634aa383b",
    "metadata": {},
    "outputs": [],
@@ -82,6 +72,9 @@
     "service = Service(executable_path='chromedriver.exe')\n",
     "driver = webdriver.Chrome(service=service)\n",
     "\n",
+    "# Maximize the Chrome window\n",
+    "driver.maximize_window()\n",
+    "\n",
     "# Interact with ebay website\n",
     "driver.get('https://www.amazon.in/')\n",
     "time.sleep(2)"
@@ -89,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "c2e2b4c2-5e29-4891-8b10-519cec1e8554",
    "metadata": {},
    "outputs": [],
@@ -110,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "6428f91f-aa1a-488f-8821-7be2e11c221e",
    "metadata": {},
    "outputs": [],
@@ -123,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "d8baa485",
    "metadata": {},
    "outputs": [],
@@ -141,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "dbe5bb4b-36ec-4ede-999f-39efd1c6ebd4",
    "metadata": {},
    "outputs": [],
@@ -175,9 +168,6 @@
     "            \n",
     "    data = {'Product Name':products, 'Price':prices}\n",
     "    df = pd.DataFrame(data)\n",
-    "    #df.head()\n",
-    "    # Save DataFrame to a CSV file\n",
-    "    # df.to_csv('..\\miniproject\\data\\amazon_television_data.csv', index=False)\n",
     "    driver.close()\n",
     "    \n",
     "except Exception as e:\n",
@@ -186,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "bc105744",
    "metadata": {},
    "outputs": [
@@ -194,100 +184,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "179\n",
-      "179\n"
+      "170\n"
      ]
     }
    ],
    "source": [
     "#Clean up the raw data\n",
-    "print(df.__len__())\n",
     "df = df.drop_duplicates()\n",
     "print(df.__len__())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "512670ff",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Product Name</th>\n",
-       "      <th>Price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>MI 80 cm (32 inches) A Series HD Ready Smart G...</td>\n",
-       "      <td>INR 12,499</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Redmi 80 cm (32 inches) F Series HD Ready Smar...</td>\n",
-       "      <td>INR 12,999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>VW 80 cm (32 inches) Frameless Series HD Ready...</td>\n",
-       "      <td>INR 7,499</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>OnePlus 108 cm (43 inches) Y Series 4K Ultra H...</td>\n",
-       "      <td>INR 24,999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>VW 80 cm (32 inches) Frameless Series HD Ready...</td>\n",
-       "      <td>INR 6,799</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                        Product Name       Price\n",
-       "0  MI 80 cm (32 inches) A Series HD Ready Smart G...  INR 12,499\n",
-       "1  Redmi 80 cm (32 inches) F Series HD Ready Smar...  INR 12,999\n",
-       "2  VW 80 cm (32 inches) Frameless Series HD Ready...   INR 7,499\n",
-       "3  OnePlus 108 cm (43 inches) Y Series 4K Ultra H...  INR 24,999\n",
-       "4  VW 80 cm (32 inches) Frameless Series HD Ready...   INR 6,799"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "69acdd22",
    "metadata": {},
    "outputs": [],
@@ -304,17 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "id": "bced398f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "d74c4027-3946-46d1-a85b-b5f50c8330f0",
    "metadata": {},
    "outputs": [],
@@ -337,17 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "id": "dc0d279d-0082-4fb3-976c-d5cbb14bbfe7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "9ab0cd01-d7b1-4823-874a-af25f1440b1a",
    "metadata": {},
    "outputs": [
@@ -355,7 +244,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vasu_seelamneni\\AppData\\Local\\Temp\\ipykernel_38060\\2952341417.py:9: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\vasu_seelamneni\\AppData\\Local\\Temp\\ipykernel_30140\\203849084.py:9: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -369,268 +258,23 @@
     "# Define the regular expression pattern for the display\n",
     "pattern = r'(LED|QLED|OLED)'\n",
     "\n",
-    "# Extract the brand from the 'Product Name' column and assign it to the 'Brand' column\n",
+    "# Extract the display from the 'Product Name' column and assign it to the 'Display' column\n",
     "df['Display'] = df['Product Name'].str.extract(pattern, flags=re.IGNORECASE, expand=False)\n",
     "\n",
-    "# Convert the 'Brand' column to uppercase\n",
+    "# Convert the 'Display' column to uppercase\n",
     "df['Display'] = df['Display'].str.upper()\n",
     "df['Display'].fillna('LED', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
-   "id": "31275d6a-3cf9-41e5-8338-fce4c75f5678",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "b67a7832",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('..\\\\..\\\\miniproject\\\\data\\\\amazon_television_data.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 221,
-   "id": "15126ddb-d6cf-4896-8541-7955afb982ff",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 177 entries, 54 to 159\n",
-      "Data columns (total 5 columns):\n",
-      " #   Column        Non-Null Count  Dtype \n",
-      "---  ------        --------------  ----- \n",
-      " 0   Product Name  177 non-null    object\n",
-      " 1   Price         177 non-null    object\n",
-      " 2   Brand         177 non-null    object\n",
-      " 3   Size          177 non-null    object\n",
-      " 4   Display       177 non-null    object\n",
-      "dtypes: object(5)\n",
-      "memory usage: 8.3+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 222,
-   "id": "7d8b6136-0cc3-4592-82d4-54b99471c85b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gk = df.groupby('Size')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 225,
-   "id": "63077f06-6a4d-433c-9ace-f3f839d2df61",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Product Name</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>Brand</th>\n",
-       "      <th>Display</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Size</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>VW 60 cm (24 inches) Premium Series HD Ready L...</td>\n",
-       "      <td>INR 5,699</td>\n",
-       "      <td>VW</td>\n",
-       "      <td>LED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>TCL 80.04 cm (32 inches) Bezel-Less S Series H...</td>\n",
-       "      <td>INR 12,490</td>\n",
-       "      <td>TCL</td>\n",
-       "      <td>LED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>VW 101 cm (40 inches) Linux Series Frameless H...</td>\n",
-       "      <td>INR 12,499</td>\n",
-       "      <td>VW</td>\n",
-       "      <td>LED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>Kodak 106 cm (42 inches) Full HD Certified And...</td>\n",
-       "      <td>INR 15,999</td>\n",
-       "      <td>KODAK</td>\n",
-       "      <td>LED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>Panasonic 108 cm (43 inches) 4K Ultra HD Smart...</td>\n",
-       "      <td>INR 31,990</td>\n",
-       "      <td>PANASONIC</td>\n",
-       "      <td>LED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>LG 121 cm (48 inches) 4K Ultra HD Smart OLED T...</td>\n",
-       "      <td>INR 75,990</td>\n",
-       "      <td>LG</td>\n",
-       "      <td>OLED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>Samsung 123 cm (49 Inches) 4K UHD LED TV UE49M...</td>\n",
-       "      <td>INR 1,12,369</td>\n",
-       "      <td>SAMSUNG</td>\n",
-       "      <td>LED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>Samsung 125 cm (50 inches) 4K Ultra HD Smart N...</td>\n",
-       "      <td>INR 89,990</td>\n",
-       "      <td>SAMSUNG</td>\n",
-       "      <td>QLED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55</th>\n",
-       "      <td>Samsung 139.7 cm (55 inches) 4K Ultra HD Smart...</td>\n",
-       "      <td>INR 52,990</td>\n",
-       "      <td>SAMSUNG</td>\n",
-       "      <td>LED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>iFFALCON 147 cm (58 inches) 4K Ultra HD Smart ...</td>\n",
-       "      <td>INR 33,999</td>\n",
-       "      <td>IFFALCON</td>\n",
-       "      <td>LED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>Samsung 163 cm (65 inches) 8K Ultra HD Smart N...</td>\n",
-       "      <td>INR 2,99,990</td>\n",
-       "      <td>SAMSUNG</td>\n",
-       "      <td>QLED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75</th>\n",
-       "      <td>Samsung 189 cm (75 inches) 4K Ultra HD Smart N...</td>\n",
-       "      <td>INR 3,34,990</td>\n",
-       "      <td>SAMSUNG</td>\n",
-       "      <td>QLED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77</th>\n",
-       "      <td>Sony Bravia 195 cm (77 inches) XR series 4K Ul...</td>\n",
-       "      <td>INR 5,22,490</td>\n",
-       "      <td>SONY</td>\n",
-       "      <td>OLED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>85</th>\n",
-       "      <td>Vu 215cm (85 inches) The Masterpiece 4K Ultra ...</td>\n",
-       "      <td>INR 2,59,999</td>\n",
-       "      <td>VU</td>\n",
-       "      <td>QLED</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                           Product Name         Price   \n",
-       "Size                                                                    \n",
-       "24    VW 60 cm (24 inches) Premium Series HD Ready L...     INR 5,699  \\\n",
-       "32    TCL 80.04 cm (32 inches) Bezel-Less S Series H...    INR 12,490   \n",
-       "40    VW 101 cm (40 inches) Linux Series Frameless H...    INR 12,499   \n",
-       "42    Kodak 106 cm (42 inches) Full HD Certified And...    INR 15,999   \n",
-       "43    Panasonic 108 cm (43 inches) 4K Ultra HD Smart...    INR 31,990   \n",
-       "48    LG 121 cm (48 inches) 4K Ultra HD Smart OLED T...    INR 75,990   \n",
-       "49    Samsung 123 cm (49 Inches) 4K UHD LED TV UE49M...  INR 1,12,369   \n",
-       "50    Samsung 125 cm (50 inches) 4K Ultra HD Smart N...    INR 89,990   \n",
-       "55    Samsung 139.7 cm (55 inches) 4K Ultra HD Smart...    INR 52,990   \n",
-       "58    iFFALCON 147 cm (58 inches) 4K Ultra HD Smart ...    INR 33,999   \n",
-       "65    Samsung 163 cm (65 inches) 8K Ultra HD Smart N...  INR 2,99,990   \n",
-       "75    Samsung 189 cm (75 inches) 4K Ultra HD Smart N...  INR 3,34,990   \n",
-       "77    Sony Bravia 195 cm (77 inches) XR series 4K Ul...  INR 5,22,490   \n",
-       "85    Vu 215cm (85 inches) The Masterpiece 4K Ultra ...  INR 2,59,999   \n",
-       "\n",
-       "          Brand Display  \n",
-       "Size                     \n",
-       "24           VW     LED  \n",
-       "32          TCL     LED  \n",
-       "40           VW     LED  \n",
-       "42        KODAK     LED  \n",
-       "43    PANASONIC     LED  \n",
-       "48           LG    OLED  \n",
-       "49      SAMSUNG     LED  \n",
-       "50      SAMSUNG    QLED  \n",
-       "55      SAMSUNG     LED  \n",
-       "58     IFFALCON     LED  \n",
-       "65      SAMSUNG    QLED  \n",
-       "75      SAMSUNG    QLED  \n",
-       "77         SONY    OLED  \n",
-       "85           VU    QLED  "
-      ]
-     },
-     "execution_count": 225,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gk.first()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a2303d2c-41dc-4c17-8c08-e86e41d8634b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
